Change styling on callgraph.
Make the colors a more dynamic gradient, and move some of the style
properties into CSS.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -261,6 +261,11 @@ tr .no-results {
 .callgraph #arrowhead {
     fill: #bbb;
 }
+.callgraph .node text {
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.5);
+	text-anchor: middle;
+	vertical-align: middle;
+}
 
 /**
  * Run details
