Add pointer events and fix some styling up.

--- a/web/webroot/css/xhgui.css
+++ b/web/webroot/css/xhgui.css
@@ -247,8 +247,10 @@ tr .no-results {
  */
 .callgraph .node {
     font: 10px sans-serif;
+    cursor: move;
 }
-.callgraph .node circle {
+
+.callgraph circle {
     fill: #fff;
     stroke: #b63c71;
     stroke-width: 1.5px;
