--- a/web/templates/runs/list.twig
+++ b/web/templates/runs/list.twig
@@ -44,7 +44,7 @@
     <p>The simplest way to get an application profiled, is to use <code>external/header.php</code>.
         This file is designed to be combined with PHP's
         <a href="http://www.php.net/manual/en/ini.core.php#ini.auto-prepend-file">auto_prepend_file</a>
-        directive. This can be enabled system-wide through `php.ini`. Alternatively, you can enable
+		directive. This can be enabled system-wide through <code>php.ini</code>. Alternatively, you can enable
         <code>auto_prepend_file</code> per virtual host. See the README.md file for more details.
     </p>
 </div>
