--- a/src/templates/layout/base.twig
+++ b/src/templates/layout/base.twig
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Xhgui {% block title '' %}</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="css/datepicker.css" rel="stylesheet" media="screen">
-    <link href="css/xhgui.css" rel="stylesheet" media="screen">
+    <link href="{{ static('css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+    <link href="{{ static('css/datepicker.css') }}" rel="stylesheet" media="screen">
+    <link href="{{ static('css/xhgui.css') }}" rel="stylesheet" media="screen">
 </head>
 <body>
     <div class="navbar navbar-static-top">
@@ -23,7 +23,7 @@
                         <li><a href="{{ url('home', {'sort': 'wt'}) }}">Longest wall time</a></li>
                         <li><a href="{{ url('home', {'sort': 'cpu'}) }}">Most CPU</a></li>
                         <li><a href="{{ url('home', {'sort': 'mu'}) }}">Most memory</a></li>
-                        <li><a href="{{ url('customview') }}">Custom View</a></li>
+                        <li><a href="{{ url('custom.view') }}">Custom View</a></li>
                         <li><a href="{{ url('watch.list') }}">Watch Functions</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -43,15 +43,15 @@
         </footer>
     </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/d3.js"></script>
-    <script src="js/jquery.tablesorter.js"></script>
-    <script src="js/jquery.stickytableheaders.js"></script>
-    <script src="js/xhgui-charts.js"></script>
-    <script src="js/xhgui.js"></script>
+    <script src="{{ static('js/jquery.js') }}"></script>
+    <script src="{{ static('js/bootstrap.min.js') }}"></script>
+    <script src="{{ static('js/bootstrap-tooltip.js') }}"></script>
+    <script src="{{ static('js/bootstrap-datepicker.js') }}"></script>
+    <script src="{{ static('js/d3.js') }}"></script>
+    <script src="{{ static('js/jquery.tablesorter.js') }}"></script>
+    <script src="{{ static('js/jquery.stickytableheaders.js') }}"></script>
+    <script src="{{ static('js/xhgui-charts.js') }}"></script>
+    <script src="{{ static('js/xhgui.js') }}"></script>
     {% block jsfoot '' %}
 </body>
 </html>
