--- a/src/templates/runs/symbol-view.twig
+++ b/src/templates/runs/symbol-view.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="row-fluid">
-    <a class="back-link" href="{{ url('/run.php', {'id': id}) }}">&laquo; Back to run</a>
+    <a class="back-link" href="{{ url('run.view', {'id': id}) }}">&laquo; Back to run</a>
     <h1>Parent/child calls for {{ symbol }}</h1>
 </div>
 <div class="row-fluid">
@@ -30,7 +30,7 @@
         <tbody>
         <tr>
             <td class="text">
-                <a href="{{ url('/symbol.php', {'id': id, 'symbol': current.function}) }}">{{ current.function }}</a>
+                <a href="{{ url('run.symbol', {'id': id, 'symbol': current.function}) }}">{{ current.function }}</a>
             </td>
             <td>{{ current.ct }}</td>
             <td>{{ current.ewt|as_time }}</td>
@@ -67,7 +67,7 @@
         {% for parent in parents %}
         <tr>
             <td class="text">
-                <a href="{{ url('/symbol.php', {'id': id, 'symbol': parent.function}) }}">{{ parent.function }}</a>
+                <a href="{{ url('run.symbol', {'id': id, 'symbol': parent.function}) }}">{{ parent.function }}</a>
             </td>
             <td>{{ parent.ct }}</td>
             <td>{{ parent.ewt|as_time }}</td>
@@ -101,7 +101,7 @@
         {% for child in children %}
         <tr>
             <td class="text">
-                <a href="{{ url('/symbol.php', {'id': id, 'symbol': child.function}) }}">{{ child.function }}</a>
+                <a href="{{ url('run.symbol', {'id': id, 'symbol': child.function}) }}">{{ child.function }}</a>
             </td>
             <td>{{ child.ct }}</td>
 
