Move flash messages into the layout.
Update the css and shuffle flash messages around.

--- a/src/templates/layout/base.twig
+++ b/src/templates/layout/base.twig
@@ -32,6 +32,12 @@
     </div>
 
     <div class="container-fluid">
+        {% if flash.success %}
+        <div class="flash alert alert-success">
+            {{ flash.success }}
+        </div>
+        {% endif %}
+
         {% block content '' %}
 
         <hr>
