Move custom + custom help code to slim

--- a/src/templates/runs/custom_create.twig
+++ b/src/templates/runs/custom_create.twig
@@ -34,7 +34,7 @@
     
     <div class="span3">
       <h2>Help</h2>
-      <p>Don't Fret, <a href="/custom_help.php">there's instructions</a>.</p>
+      <p>Don't Fret, <a href="{{ url('custom.help') }}">there's instructions</a>.</p>
     
     </div><!--/span-->
   
