--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -135,8 +135,8 @@
 {% endblock %}
 
 {% block jsfoot %}
-<script type="text/javascript" src="./lib/d3.js"></script>
-    <script type="text/javascript" src="./lib/underscore.js"></script>
+<script type="text/javascript" src="/js/d3.js"></script>
+    <script type="text/javascript" src="/js/underscore.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
 
     <script>
