--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -146,7 +146,7 @@
         function load() {
             var w = 800,
                 h = {{ height }} ;
-            d3.json('/waterfall/data?remote_addr={{ remote_addr }}&request_start={{ request_start }}&request_end={{ request_end }}', function (data) {
+            d3.json('/waterfall/data?remote_addr={{ search.remote_addr }}&request_start={{ search.request_start }}&request_end={{ search.request_end }}', function (data) {
                 data.forEach(function (d) {
                     d.startdt = new Date(d.start);
                     d.enddt = new Date(d.start + d.duration);
