--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -6,30 +6,6 @@
 {% endblock %}
 
 {% block content %}
-    <style>
-       .axis {
-            shape-rendering: crispEdges;
-        }
-        .x.axis line {
-            stroke: #ccc;
-        }
-        .x.axis .minor {
-            stroke-opacity: .5;
-        }
-        .x.axis path {
-            display: none;
-        }
-        .bar {
-            fill: steelblue;
-        }
-        text {
-            color: black;
-        }
-
-    
-}
-    </style>
-
 <div class="searchbar clearfix">
     <a href="#" class="pull-right btn btn-small search-expand" title="Show search form">
         <i class="icon-search"></i> Search
@@ -126,9 +102,8 @@
 
 
 <div id="log"></div>
-<svg id="waterfall">
+<svg id="waterfall" class="waterfall">
 </svg>
- 
 
 
 
