--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -14,10 +14,11 @@
     <form action="{{ url('waterfall') }}" method="get" class="row hide search-form form-inline">
         <a href="#" class="search-collapse close" title="Hide search form">&times;</a>
         <div class="control-group span4">
-            <label class="control-label" for="start_date">Date range</label>
+            <label class="control-label" for="start_date">Date/time range</label>
             <div class="controls">
-                <input type="text" name="request_start" value="{{ search.request_start }}">
-                <input type="text" name="request_end" value="{{ search.request_end }}">
+                <input type="text" class="span2" name="request_start" value="{{ search.request_start }}">
+                <input type="text" class="span2" name="request_end" value="{{ search.request_end }}">
+                <small class="muted">Either unix timestamps or date time string formatted as YYYY-MM-DD H:i:s</small>
             </div>
         </div>
         <div class="control-group span4">
