Update waterfall to use new features in master.
* Convert code into controller objects and use the service container.
* Update code and links to follow standard conventions.

--- a/src/templates/layout/base.twig
+++ b/src/templates/layout/base.twig
@@ -25,7 +25,7 @@
                         <li><a href="{{ url('home', {'sort': 'mu'}) }}">Most memory</a></li>
                         <li><a href="{{ url('custom.view') }}">Custom View</a></li>
                         <li><a href="{{ url('watch.list') }}">Watch Functions</a></li>
-                        <li><a href="{{ url('waterfall') }}">Waterfall</a></li>
+                        <li><a href="{{ url('waterfall.list') }}">Waterfall</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
