--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -11,7 +11,7 @@
         <i class="icon-search"></i> Search
     </a>
 
-    <form action="{{ url('waterfall') }}" method="get" class="row hide search-form form-inline">
+    <form action="{{ url('waterfall.list') }}" method="get" class="row hide search-form form-inline">
         <a href="#" class="search-collapse close" title="Hide search form">&times;</a>
         <div class="control-group span4">
             <label class="control-label" for="start_date">Date/time range</label>
