--- a/src/templates/waterfall/list.twig
+++ b/src/templates/waterfall/list.twig
@@ -6,6 +6,8 @@
 {% endblock %}
 
 {% block content %}
+<h1>Waterfall visualization</h1>
+
 <div class="searchbar clearfix">
     <a href="#" class="pull-right btn btn-small search-expand" title="Show search form">
         <i class="icon-search"></i> Search
@@ -37,6 +39,17 @@
             <button type="submit" class="btn btn-primary">Search</button>
         </div>
     </form>
+</div>
+
+<div class="row-fluid">
+    {% if search is empty %}
+    <div class="alert alert-info alert-block">
+        <h4>No data</h4>
+        <p>You need to do a search in order to see a waterfall graph.</p>
+    </div>
+    {% else %}
+    <svg id="waterfall" class="waterfall"></svg>
+    {% endif %}
 </div>
 
 <div class="row-fluid">
@@ -99,12 +112,6 @@
         </tbody>
     </table>
 </div>
-
-
-
-<div id="log"></div>
-<svg id="waterfall" class="waterfall">
-</svg>
 
 
 
