fix pagination in url.twig

--- a/src/templates/runs/url.twig
+++ b/src/templates/runs/url.twig
@@ -36,7 +36,7 @@
 
 {% include 'runs/paginated-list.twig' %}
 
-{{ helpers.pagination('url.view', paging, {url: url}) }}
+{{ helpers.pagination('url.view', paging, search) }}
 
 {% endblock %}
 
