--- a/src/templates/runs/view.twig
+++ b/src/templates/runs/view.twig
@@ -29,7 +29,7 @@
             <li>{{ helpers.property_list('SERVER', result.meta('SERVER')) }}
 
             <li class="nav-header">Waterfall</li>
-            <li><strong>By IP</strong> <a href="/waterfall?remote_addr={{ result.meta.SERVER.REMOTE_ADDR }}&amp;request_start={{ result.meta.SERVER.REQUEST_TIME - 5 }}&amp;request_end={{ result.meta.SERVER.REQUEST_TIME + 15}}">{{ result.meta.SERVER.REMOTE_ADDR }}</a></li>
+            <li><strong>By IP</strong> <a href="{{ url('waterfall.list', {'remote_addr': result.meta.SERVER.REMOTE_ADDR, 'request_start': result.meta.SERVER.REQUEST_TIME - 5, 'request_end': result.meta.SERVER.REQUEST_TIME + 15}) }}">{{ result.meta.SERVER.REMOTE_ADDR }}</a></li>
 
         </ul>
     </div><!--/.well -->
