Wire route + template together.
JSON data is now fetched for callgraphs. This will enable more
interactive callgraphs to be built in the future.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -21,13 +21,15 @@ the actual method callgraph.</p>
 <script src="{{ static('js/callgraph.js') }}"></script>
 <script>
 $(document).ready(function () {
-    Xhgui.callgraph(
-        '#callgraph-image',
-        {{ callgraph|json_encode|raw }},
-        {
-            baseUrl: "{{ url('run.symbol', {'id': profile.id|trim }) }}"
-        }
-    );
+    $.getJSON("{{ url('run.callgraph.data', {'id': profile.id|trim}) }}", function (data) {
+        Xhgui.callgraph(
+            '#callgraph-image',
+            data,
+            {
+                baseUrl: "{{ url('run.symbol', {'id': profile.id|trim }) }}"
+            }
+        );
+    });
 });
 </script>
 {% endblock %}
