Use a select instead of radios.
Radios were a bit unwieldy and painful to use. Also the dialog was
a shitter to position.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -290,6 +290,12 @@ tr .no-results {
     text-anchor: middle;
     vertical-align: middle;
 }
+#metric-popover {
+    left: auto;
+    right: 50px;
+    width: 250px;
+    top: -58px;
+}
 
 /**
  * Waterfall chart
