--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -11,35 +11,21 @@
     <a href="#" id="customize-graph" class="btn btn-default btn-small">
         Gear
     </a>
-    <div class="popover bottom" id="metric-popover">
+    <div class="popover left" id="metric-popover">
         <div class="arrow"></div>
         <div class="popover-content">
             <h4>Metric</h4>
             <div class="control-group">
-                <label>
-                    <input type="radio" name="metric" value="wt">
-                    Wall time
-                </label>
-                <label>
-                    <input type="radio" name="metric" value="cpu">
-                    CPU time
-                </label>
-                <label>
-                    <input type="radio" name="metric" value="mu">
-                    Memory use
-                </label>
-                <label>
-                    <input type="radio" name="metric" value="ewt">
-                    Exclusive wall time
-                </label>
-                <label>
-                    <input type="radio" name="metric" value="ecpu">
-                    Exclusive CPU time
-                </label>
-                <label>
-                    <input type="radio" name="metric" value="emu">
-                    Exclusive memory use
-                </label>
+                <select name="metric">
+                    <option value="ct">Call count</option>
+                    <option value="wt" selected="selected">Wall time</option>
+                    <option value="cpu">CPU time</option>
+                    <option value="mu">Memory use</option>
+                    <option value="ewt">Exclusive wall time</option>
+                    <option value="ecpu">Exclusive CPU</option>
+                    <option value="emu">Exclusive memory use</option>
+                    <option value="emu">Exclusive memory use</option>
+                </select>
             </div>
             <div class="btn-group">
                 <button class="btn btn-primary">Apply</button>
@@ -63,19 +49,17 @@ the actual method callgraph.</p>
 <script>
 $(document).ready(function () {
     var gear = $('#customize-graph');
-    var radios = $('input[name=metric]');
+    var select = $('select[name=metric]');
     var popover = $('#metric-popover');
     var ok = popover.find('.btn');
 
     gear.on('click', function(e) {
-        // Hack in place.
         popover.show();
-        popover.css({left: -120, top: 20});
         return false;
     });
 
     ok.on('click', function(e) {
-        var metric = radios.filter(':checked').val();
+        var metric = select.val();
         popover.hide();
         loadCallgraph(metric);
         return false;
