Fix not being able to toggle popover with the original button.

--- a/src/templates/runs/callgraph.twig
+++ b/src/templates/runs/callgraph.twig
@@ -54,7 +54,7 @@ $(document).ready(function () {
     var ok = popover.find('.btn');
 
     gear.on('click', function(e) {
-        popover.show();
+        popover.toggle();
         return false;
     });
 
